--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,10 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+<view class="container_index">
+  <view class='header'>
+    <view class="location" bindtap='{{changeLocation}}'><text class='location-text'>{{location}}</text></view>
+    <view class='search'>
+      <icon class="searchcion" size='20' type='search'></icon>
+      <input class='searchInput' placeholder='请输入关键字' placeholder-class='searchInputText'></input>
+    </view>
   </view>
 </view>
