--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,46 @@
 /**index.wxss**/
-.userinfo {
+.container_index {
+  height: 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.header {
+  display: flex;
+  flex-direction: row;
+  background-color: red;
+  width: 100%;
+  top: 10rpx;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.location {
+  display: flex;
+  position: flex;
+  margin-left: 20rpx;
+  width: 155rpx;
 }
-
-.usermotto {
-  margin-top: 200px;
+.location-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 30rpx;
+}
+.search {
+  display: flex;
+  height: 80%;
+  margin-top: 5rpx;
+  margin-left: 130rpx;
+  background-color: white;
+  border: 0rpx solid #000;
+  border-radius:50rpx; 
+}
+.searchcion {
+  margin-top: 6rpx;
+  margin-left: 20rpx;
+  display: flex;
+}
+.searchInput {
+  display: flex;
+  flex-direction: row;
+}
+.searchInputText {
+  font-size: 30rpx;
 }
