--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,21 @@
 <!--index.wxml-->
 <view class="container_index">
   <view class='header'>
-    <view class="location" bindtap='{{changeLocation}}'><text class='location-text'>{{location}}</text></view>
+    <view class="location" bindtap='{{changeLocation}}'>
+      <text class='location-text'>{{location}}</text>
+    </view>
     <view class='search'>
       <icon class="searchcion" size='20' type='search'></icon>
       <input class='searchInput' placeholder='请输入关键字' placeholder-class='searchInputText'></input>
     </view>
+  </view>
+  <view class='swiper-view'>
+    <swiper class='u-wrp-bnr' indicator-dots='true' autoplay='true' interval='5000' duration='1000' circular='true'>
+      <block wx:for="{{bnrUrl}}" wx:for-index="index" wx:key="*this">
+        <swiper-item>
+          <image src='{{item.url}}' class='u-img-slide' mode='aspectFill'></image>
+        </swiper-item>
+      </block>
+    </swiper>
   </view>
 </view>
