--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,6 +1,6 @@
 <view>
   <view>
-    <image>头像</image>
+    <image src='https://wx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKtGdfGvgMJ7orcVqdPHia4YLaFW8jJpIQK7UJGCRhbwmTsbxM9fNc8lpwXQXMFdzxcB9NuO9EknZw/0' style='height:30px;width:30px;'></image>
     <view>昵称</view>
     <view>钱包</view>
     <view>我的收藏</view>
@@ -20,9 +20,6 @@
     <view>商家入口</view>
     <view>二批入驻</view>
     <view>二批入口</view>
-  </view>
-
-  <view>
     <view>联系客服</view>
     <view>帮助中心</view>
     <view>关于我们</view>
