附近二批入驻

--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -18,7 +18,7 @@
   <view>
     <view bindtap='agencySignin'>商家入驻</view>
     <view>商家入口</view>
-    <view>二批入驻</view>
+    <view bindtap='nearbyAgencySignin'>二批入驻</view>
     <view>二批入口</view>
     <button open-type='contact'>联系我们</button>
     <view bindtap='help'>帮助中心</view>
