--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,7 +1,7 @@
 <view>
   <view>
-    <image src='https://wx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTKtGdfGvgMJ7orcVqdPHia4YLaFW8jJpIQK7UJGCRhbwmTsbxM9fNc8lpwXQXMFdzxcB9NuO9EknZw/0' style='height:30px;width:30px;'></image>
-    <view>昵称</view>
+    <open-data type="userAvatarUrl"></open-data> 
+    <open-data type="userNickName" lang="zh_CN"></open-data>
     <view>钱包</view>
     <view>我的收藏</view>
   </view>
