--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,10 +1,16 @@
 /* pages/search/search.wxss */
+.container_search {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .header {
   background-color: red;
   height: 100rpx;
   display: flex;
-  margin-top: 30rpx;
   justify-content: center;
   align-items: center;
 }
@@ -30,10 +36,36 @@
 }
 
 .search-clear {
-  margin-top: 2rpx;
+  margin-top: 3rpx;
 }
 
 .searchInputText {
   font-size: 30rpx;
 }
 
+.search-result {
+  width: 90%;
+  background-color: lightyellow;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+}
+
+.content {
+  display: block;
+  text-overflow: hidden;
+  line-height: 40rpx;
+}
+
+.divLine1{
+ background: red;
+ width: 100%;
+ height: 3rpx;
+}
+
+.divLine2{
+ background: red;
+ width: 100%;
+ height: 8rpx;
+}
