--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,27 +1,86 @@
 <view>
-  <view>
-    <open-data type="userAvatarUrl"></open-data> 
-    <open-data type="userNickName" lang="zh_CN"></open-data>
-    <view>钱包</view>
-    <view>我的收藏</view>
+  <view class="mine-top">
+    <open-data class="avatar" type="userAvatarUrl"></open-data> 
+    <open-data class="username" type="userNickName" lang="zh_CN"></open-data>
   </view>
 
-  <view>
-    <view>我的订单</view>
-    <view>待付款</view>
-    <view>待发货</view>
-    <view>待收货</view>
-    <view>已完成</view>
-    <view>售后</view>
+  <view class="weui-panel panel-myorder">
+    <view class="media-box">
+      <view class="media-box-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="media-box-bd">我的订单</view>
+    </view>
+    <view class="order-tab"><image src="{{orderImage1}}"></image><view>待付款</view></view>
+    <view class="order-tab"><image src="{{orderImage2}}"></image><view>待发货</view></view>
+    <view class="order-tab"><image src="{{orderImage3}}"></image><view>待收货</view></view>
+    <view class="order-tab"><image src="{{orderImage4}}"></image><view>已完成</view></view>
+    <view class="order-tab"><image src="{{orderImage5}}"></image><view>售后</view></view>
   </view>
 
-  <view>
-    <view bindtap='agencySignin'>商家入驻</view>
-    <view>商家入口</view>
-    <view bindtap='nearbyAgencySignin'>二批入驻</view>
-    <view>二批入口</view>
-    <button open-type='contact'>联系我们</button>
-    <view bindtap='help'>帮助中心</view>
-    <view bindtap='aboutUs'>关于我们</view>
+  <view class="weui-panel weui-cells panel-myorder">
+    <view class="weui-cell">
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">我的钱包</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">我的收藏</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell" bindtap='agencySignin'>
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">商家入驻</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">商家入口</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell" bindtap='nearbyAgencySignin'>
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">二批入驻</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">二批入口</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell" open-type='contact'>
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">联系我们</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell" bindtap='help'>
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">帮助中心</view>
+      <span class="weui-cell-ft"></span>
+    </view>
+    <view class="weui-cell" bindtap='aboutUs'>
+      <view class="weui-cell-hd">
+        <image class="media-box-thumb" src="{{orderImage0}}"></image>
+      </view>
+      <view class="weui-cell-bd">关于我们</view>
+      <span class="weui-cell-ft"></span>
+    </view>
   </view>
 </view>
