--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,1 +1,42 @@
 /* pages/mine/mine.wxss */
+.mine-top{
+	background: #0097fe;
+	text-align: center;
+	position: relative;
+	padding: 30px 0;
+	margin: 0 -20px;
+}
+.avatar{
+	border-radius:200px;
+	overflow:hidden;
+	width:100px;
+	display:inline-block;
+	height:100px;
+	margin: 0 0 5px 0;
+}
+.username{
+	color: #fff;
+	display: block;
+	text-align: center;
+	font-size: 14px;
+}
+.panel-myorder .media-box-hd{
+	width:30px;
+	height:30px;
+}
+.panel-myorder .media-box-bd{
+	line-height: 30px;
+}
+.order-tab{
+	width: 20%;
+	float: left;
+	text-align: center;
+	font-size: 14px;
+	padding: 15px 0;
+}
+.order-tab image{
+	width: 32px;
+	height: 32px;
+	margin: 0 0 2px 0;
+
+}
