--- a/pages/agencySignin/agencySignin.wxml
+++ b/pages/agencySignin/agencySignin.wxml
@@ -4,11 +4,11 @@
       <form bindsubmit="formSubmit">
         <view class='form-item'>
           <text class='label'>代理商名称</text>
-          <input placeholder="代理商名称"></input>
+          <input name="agencyName" placeholder="代理商名称"></input>
         </view>
         <view class='form-item'>
           <text class='label'>详细地址</text>
-          <input bindtap='chooseAddress' value='{{addressDetail}}'></input>
+          <input name="addressDetail" bindtap='chooseAddress' value='{{addressDetail}}'></input>
         </view>
         <view class='form-item'>
           <text class='label'>显示区域</text>
@@ -17,7 +17,7 @@
         <!--三级选择-->
         <view class='form-item'>
           <text class='label'>服务工号</text>
-          <input></input>
+          <input name="serviceNumber"></input>
         </view>
         <view class='form-item'>
           <text class='label'>代理商logo</text>
@@ -33,23 +33,24 @@
         </view>
         <view class='form-item'>
             <text class='label'>电话</text> 
-            <input placeholder="联系人电话"></input>
+            <input name="mobilePhone" placeholder="联系人电话"></input>
         </view>
+        <view>发送验证码</view>
         <view class='form-item'>
           <text class='label'>验证码</text>
-          <input></input>
+          <input name="validateCode"></input>
         </view>
+        <view class='title'>入驻时长</view>
+        <view>
+          <radio-group class="radio-group" bindchange="radioChange">
+            <label class="radio" wx:for="{{items}}">
+              <radio name="time" value="{{item.name}}" checked="{{item.checked}}" />
+              {{item.value}}
+            </label>
+          </radio-group>
+        </view>
+        <button form-type='submit'>申请入驻</button>
       </form>
     </view>
   </view>
-  <view class='title'>入驻时长</view>
-    <view>
-      <radio-group class="radio-group" bindchange="radioChange">
-        <label class="radio" wx:for="{{items}}">
-          <radio value="{{item.name}}" checked="{{item.checked}}" />
-          {{item.value}}
-        </label>
-      </radio-group>
-    </view>
-  <button>申请入驻</button>
 </view>
