--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -3,8 +3,8 @@
 	background: #0097fe;
 	text-align: center;
 	position: relative;
-	padding: 30px 0;
-	margin: 0 -20px;
+	padding: 60rpx 0;
+	margin: 0 -40rpx;
 }
 .avatar{
 	border-radius:200px;
@@ -12,31 +12,31 @@
 	width:100px;
 	display:inline-block;
 	height:100px;
-	margin: 0 0 5px 0;
+	margin: 0 0 10rpx 0;
 }
 .username{
 	color: #fff;
 	display: block;
 	text-align: center;
-	font-size: 14px;
+	font-size: 28rpx;
 }
 .panel-myorder .media-box-hd{
-	width:30px;
-	height:30px;
+	width:60rpx;
+	height:60rpx;
 }
 .panel-myorder .media-box-bd{
-	line-height: 30px;
+	line-height: 60rpx;
 }
 .order-tab{
 	width: 20%;
 	float: left;
 	text-align: center;
-	font-size: 14px;
-	padding: 15px 0;
+	font-size: 28rpx;
+	padding: 30rpx 0;
 }
 .order-tab image{
-	width: 32px;
-	height: 32px;
-	margin: 0 0 2px 0;
+	width: 64rpx;
+	height: 64rpx;
+	margin: 0 0 4rpx 0;
 
 }
