--- a/pages/agencySignin/agencySignin.wxml
+++ b/pages/agencySignin/agencySignin.wxml
@@ -11,8 +11,13 @@
           <input name="addressDetail" bindtap='chooseAddress' value='{{addressDetail}}'></input>
         </view>
         <view class='form-item'>
-          <text class='label'>显示区域</text>
-          <input placeholder="显示区域"></input>
+          <!-- <text class='label'>显示区域</text>
+          <input placeholder="显示区域"></input> -->
+          <picker-view>
+            <picker>北京市</picker>
+            <picker>北京市</picker>
+            <picker>朝阳区</picker>
+          </picker-view>
         </view>
         <!--三级选择-->
         <view class='form-item'>
